--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "School Management System",
+  "name": "school-management-system",
   "version": "1.0.0",
   "description": "Collect data of students, teachers, users, and courses API",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,6 @@
     "passport-github2": "^0.1.12",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
-  }
+  },
+  "keywords": []
 }
