--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Collect data of students, teachers, users, and courses API",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -33,6 +33,7 @@
   },
   "keywords": [],
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
