--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.3.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
